# intelligent_robot_systems_2016

./: README.md
art_autonomous_exploration/: CMakeLists.txt  package.xml
art_autonomous_exploration/config/: autonomous_expl.yaml
art_autonomous_exploration/launch/: all_except_exploration.launch  dummy_slam.launch  everything.launch  exploration_only.launch  rviz.launch  stdr.launch  teleop.launch
art_autonomous_exploration/rviz/: config.rviz
art_autonomous_exploration/src/: brushfires.py  laser_data_aggregator.py  main.py  navigation.py  path_planning.py  robot_perception.py  sonar_data_aggregator.py  speeds_assignment.py  target_selection.py  topology.py  utilities.py
art_dummy_slam/dummy_slam/: CMakeLists.txt  package.xml
art_dummy_slam/dummy_slam/config/dummy_slam/: dummy_slam_parameters.yaml
art_dummy_slam/dummy_slam/include/dummy_slam/: dummy_slam.h  dummy_slam_hillclimbing.h  dummy_slam_laser.h  dummy_slam_laserScan.h  dummy_slam_map.h  dummy_slam_slamParameters.h
art_dummy_slam/dummy_slam/launch/: crsm_slam_simulation.launch
art_dummy_slam/dummy_slam/src/dummy_slam/: dummy_slam.cpp  dummy_slam_laser.cpp  dummy_slam_map.cpp  dummy_slam_node.cpp
art_ogmpp/: README.md
art_ogmpp/art_ogmpp/: CMakeLists.txt  package.xml
art_ogmpp/ogmpp_communications/: CMakeLists.txt  package.xml
art_ogmpp/ogmpp_communications/msg/: OgmppPathPlanningMsg.msg
art_ogmpp/ogmpp_communications/srv/: OgmppPathPlanningSrv.srv  OgmppSetMapSrv.srv
art_ogmpp/ogmpp_graph/: CMakeLists.txt  package.xml
art_ogmpp/ogmpp_graph/cfg/: ogmpp_graph_properties.yaml
art_ogmpp/ogmpp_graph/include/ogmpp_graph/: ogmpp_cell.hpp  ogmpp_graph.hpp  ogmpp_node.hpp
art_ogmpp/ogmpp_graph/src/ogmpp_graph/: ogmpp_cell.cpp  ogmpp_graph.cpp  ogmpp_node.cpp
art_ogmpp/ogmpp_graph/tests/ogmpp_graph/: cell_unit_tests.cpp  graph_unit_tests.cpp  node_unit_tests.cpp
art_ogmpp/ogmpp_launchers/: CMakeLists.txt  package.xml
art_ogmpp/ogmpp_launchers/launch/: ogmpp_planners.launch  rviz.launch
art_ogmpp/ogmpp_launchers/rviz/: config.rviz
art_ogmpp/ogmpp_map_loader/: CMakeLists.txt  package.xml
art_ogmpp/ogmpp_map_loader/cfg/: map_loader_params.yaml
art_ogmpp/ogmpp_map_loader/include/ogmpp_map_loader/: ogmpp_map_loader.hpp
art_ogmpp/ogmpp_map_loader/src/ogmpp_map_loader/: ogmpp_map_loader.cpp
art_ogmpp/ogmpp_metrics/: CMakeLists.txt  package.xml
art_ogmpp/ogmpp_metrics/include/ogmpp_metrics/: ogmpp_metrics_node.hpp
art_ogmpp/ogmpp_metrics/src/ogmpp_metrics/: ogmpp_metrics_node.cpp
art_ogmpp/ogmpp_planners/: CMakeLists.txt  package.xml
art_ogmpp/ogmpp_planners/cfg/: prms_parameters.yaml  rrts_parameters.yaml
art_ogmpp/ogmpp_planners/include/ogmpp_planners/: ogmpp_abstract_planner.hpp  ogmpp_planner_factory.hpp  ogmpp_planners_node.hpp
art_ogmpp/ogmpp_planners/include/ogmpp_planners/ogmpp_prms/: ogmpp_uniform_sampling.hpp
art_ogmpp/ogmpp_planners/src/ogmpp_planners/: ogmpp_abstract_planner.cpp  ogmpp_planner_factory.cpp  ogmpp_planners_node.cpp
art_ogmpp/ogmpp_planners/src/ogmpp_planners/ogmpp_prms/: ogmpp_uniform_sampling.cpp
art_ogmpp/ogmpp_resources/: CMakeLists.txt  package.xml
art_ogmpp/ogmpp_search_algorithms/: CMakeLists.txt  package.xml
art_ogmpp/ogmpp_search_algorithms/include/ogmpp_search_algorithms/: ogmpp_a_star.hpp  ogmpp_search_algorithms.hpp
art_ogmpp/ogmpp_search_algorithms/src/ogmpp_search_algorithms/: ogmpp_a_star.cpp  ogmpp_search_algorithms.cpp
documentation/: launch_code.md  setup.md  structure.md
