<?xml version="1.0"?>
<package format="2">
  <name>ogmpp_communications</name>
  <version>0.0.0</version>
  <description>The ogmpp_communications package</description>

  <maintainer email="etsardou@gmail.com">Manos Tsardoulias</maintainer>

  <license>GPL v2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>

  <export>
  </export>
</package>
