<?xml version="1.0"?>
<package format="2">
  <name>ogmpp_graph</name>
  <version>0.0.0</version>
  <description>The ogmpp_graph package</description>

  <maintainer email="etsardou@gmail.com">Manos Tsardoulias</maintainer>

  <license>GPL v2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
