<?xml version="1.0"?>
<package format="2">
  <name>ogmpp_map_loader</name>
  <version>0.0.0</version>
  <description>The ogmpp_map_loader package</description>

  <maintainer email="etsardou@gmail.com">Manos Tsardoulias</maintainer>

  <license>GPL v2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>ogmpp_communications</depend>
  
  <export>
  </export>
</package>
