<?xml version="1.0"?>
<package format="2">
  <name>ogmpp_search_algorithms</name>
  <version>0.0.0</version>
  <description>The ogmpp_search_algorithms package</description>

  <maintainer email="etsardou@gmail.com">Manos Tsardoulias</maintainer>

  <license>GPL v2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ogmpp_graph</depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
